[workspace]
resolver = "2"
members = [
  "packages/ui",
  "packages/web",
  "packages/desktop",
  "packages/mobile",
  "packages/api",
]

[workspace.dependencies]
dioxus = { version = "0.7.1" }
tokio = { version = "1.50.0" }
sqlx = { version = "0.9.0-alpha.1" }
serde = { version = "1.0.228" }

# workspace
ui = { path = "packages/ui" }
api = { path = "packages/api" }
