[workspace]
resolver = "2"
members = [
  "packages/ui",
  "packages/web",
  "packages/desktop",
  "packages/mobile",
  "packages/api",
]

[workspace.dependencies]
dioxus = { version = "0.7.1" }
serde = { version = "1.0.228" }
sqlx = { version = "0.8.6" }
tokio = { version = "1.50.0" }

# workspace
ui = { path = "packages/ui" }
api = { path = "packages/api" }
