[workspace]
resolver = "2"
members = [
  "packages/ui",
  "packages/web",
  "packages/desktop",
  "packages/mobile",
  "packages/api",
]

[workspace.dependencies]
dioxus = "0.7.1"
serde = "1.0.228"
sqlx = "0.8.6"
tokio = "1.50.0"
dotenvy = "0.15.7"

# workspace
ui = { path = "packages/ui" }
api = { path = "packages/api" }
